# datasette-packages

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_packages/: __init__.py
datasette_packages/templates/: package_detail.html  packages_list.html
tests/: test_packages.py
